First commit. Home page and navbar looks decent, somewhat complete. Added background image. Fixed some issues with the navbar not appearing, and the logo of the navbar being partially cut off after clicked on. This was solved just by pointing the href to itself, so the website appears to refresh.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Clattering;
+    src: url(assets/fonts/Clattering.otf) format("opentype");
+  }
